--- a/home.html
+++ b/home.html
@@ -3,11 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog Site</title>
+    <title>My Page</title>
 </head>
 <body>
-    <h3>My Blog Site</h3>
-    
-    
+   <h2>Welcome to my page.</h2>
 </body>
 </html>
